--- a/.github/workflows/test_composer_1.yaml
+++ b/.github/workflows/test_composer_1.yaml
@@ -4,7 +4,7 @@ jobs:
   test_7:
     strategy:
       matrix:
-        php_version: [ '7.3' ]
+        php_version: [ '8.0', '7.3' ]
         codeception_version: [ '2.5', '3.0', '4.0' ]
     name: PHP ${{ matrix.php_version }}, CC ${{ matrix.codeception_version }}, Composer v1
     runs-on: ubuntu-18.04
